--- a/styles.css
+++ b/styles.css
@@ -281,6 +281,7 @@ display: flex;         /* 启用Flexbox布局 */
     align-items: center;
     height: 90vh;
     align-items: stretch; /* 使所有项目的高度一致 */
+    padding: 0px 0px 50px 0px;
 }
 
 .scene4card {
