--- a/styles.css
+++ b/styles.css
@@ -237,7 +237,7 @@ display: flex;         /* 启用Flexbox布局 */
 }
 
 #card060 {
-    background: linear-gradient(135deg, #d5c7e2, #c6c6dc, #ffffff); /* 从浅海蓝到浅紫色，再到淡灰色，象征生命的流动和形状的抽象 */
+    background: linear-gradient(135deg, #d5c7e2, #C6C6F5, #ffffff); /* 从浅海蓝到浅紫色，再到淡灰色，象征生命的流动和形状的抽象 */
 }
 
 
