--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ html, body {
 
 .top-navigation li {
     display: inline-block;
-    padding: 0 10px;
+    padding: 10px 0;
     color: white;
     cursor: pointer;
 }
