--- a/styles.css
+++ b/styles.css
@@ -11,18 +11,16 @@ html, body {
 
 
 .top-navigation ul {
-    font-size: 0;
     list-style: none;
     padding: 0;
     margin: 0;
     background-image: linear-gradient(rgb(0, 0, 0), rgb(0, 0, 0),rgb(0, 0, 0));
-
     text-align: center;
 }
 
 .top-navigation li {
     display: inline-block;
-    padding: 10px;
+    padding: 10px 0; /* 仅保留上下内边距 */
     color: white;
     cursor: pointer;
 }
