--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ html, body {
 
 
 .top-navigation ul {
+    font-size: 0;
     list-style: none;
     padding: 0;
     margin: 0;
@@ -19,6 +20,7 @@ html, body {
 }
 
 .top-navigation li {
+    font-size: 16px;
     display: inline-block;
     padding: 10px 20px; /* 仅保留上下内边距 */
     color: white;
