--- a/styles.css
+++ b/styles.css
@@ -11,18 +11,17 @@ html, body {
 
 
 .top-navigation ul {
-    font-size: 0;
     list-style: none;
     padding: 0;
     margin: 0;
     background-image: linear-gradient(rgb(0, 0, 0), rgb(0, 0, 0),rgb(0, 0, 0));
+
     text-align: center;
 }
 
 .top-navigation li {
-    font-size: 16px;
     display: inline-block;
-    padding: 10px 20px; /* 仅保留上下内边距 */
+    padding: 10px;
     color: white;
     cursor: pointer;
 }
@@ -79,10 +78,20 @@ html, body {
 
 
 .scene1 {
+    position: relative;
     min-height: 90vh; /* 或者设置一个足够大的固定高度 */
-    background: linear-gradient(135deg, #e9b44c, #9b2915, rgb(157, 191, 221)); 
     display: flex;
     justify-content: space-between;
+}
+
+.scene1-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: linear-gradient(135deg, #e9b44c, #9b2915, rgb(157, 191, 221)); /* 定义你的背景 */
+    z-index: 0; /* 确保背景在内容之下 */
 }
 
 .scene1-left {
@@ -100,7 +109,7 @@ display: flex;         /* 启用Flexbox布局 */
 .scene1-left img {
     width: 100%;
     height: auto;
-    border: 3px solid #907a39;  /* 添加画框，颜色可以自定义 */
+    border: 3px solid #d1c49b;  /* 添加画框，颜色可以自定义 */
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5); /* 添加阴影效果 */
 }
 
@@ -147,12 +156,22 @@ display: flex;         /* 启用Flexbox布局 */
 }
 
 .scene2 {
-    background: radial-gradient(circle at center, #000000, #4e0000, #800000, #a0522d, #c19a6b); /* 中心向外的深红色到棕褐色渐变 */
+    position: relative;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     height: 90vh;
+}
+
+.scene2-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: radial-gradient(circle at center, #000000, #4e0000, #800000, #a0522d, #c19a6b); /* 中心向外的深红色到棕褐色渐变 */
+    z-index: 0; /* 确保背景在内容之下 */
 }
 
 .scene2card {
@@ -182,7 +201,7 @@ display: flex;         /* 启用Flexbox布局 */
         width: 90%; /* 在小屏幕上占满更多空间 */
     }
     .scene2 {
-        min-height: 250vh; /* 或者设置一个足够大的固定高度 */
+        min-height: 200vh; /* 或者设置一个足够大的固定高度 */
         padding: 0px 0px 60px 0px;
     }
 }
@@ -192,15 +211,25 @@ display: flex;         /* 启用Flexbox布局 */
         width: 30%; /* 在小屏幕上占满更多空间 */
     }
     .scene2 {
-        min-height: 250vh; /* 屏幕宽度在800px到1400px时，设置更大的高度 */
+        min-height: 200vh; /* 屏幕宽度在800px到1400px时，设置更大的高度 */
         padding: 0px 0px 55px 0px;
     }
 }
 
 .scene3 {
-    background: radial-gradient(circle at center, #b56247 0%, #ae6c4d 25%, #9f7a5a 50%, #cfb79f 75%, #e4d6c3 100%);
+    position: relative;
     display: flex;
     height: 90vh;
+}
+
+.scene3-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: radial-gradient(circle at center, #b56247 0%, #ae6c4d 25%, #9f7a5a 50%, #cfb79f 75%, #e4d6c3 100%);
+    z-index: 0;
 }
 
 .left-part, .right-part {
@@ -238,7 +267,7 @@ display: flex;         /* 启用Flexbox布局 */
 }
 
 #card060 {
-    background: linear-gradient(135deg, #D5C7FF, #C6C6FF, #ffffff); /* 从浅海蓝到浅紫色，再到淡灰色，象征生命的流动和形状的抽象 */
+    background: linear-gradient(135deg, #d5c7e2, #c6c6dc, #ffffff); /* 从浅海蓝到浅紫色，再到淡灰色，象征生命的流动和形状的抽象 */
 }
 
 
@@ -248,7 +277,7 @@ display: flex;         /* 启用Flexbox布局 */
     height: auto;
     border: 3px solid #ac8b6d; /* 暗金色边框 */
     box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5); /* 添加阴影效果 */
-    margin: 2px;
+    margin: 5px;
 }
 
 
@@ -275,19 +304,27 @@ display: flex;         /* 启用Flexbox布局 */
 
 
 .scene4 {
-    background: radial-gradient(circle at center, #000000, #4e0000, #800000, #a0522d, #c19a6b); /* 中心向外的深红色到棕褐色渐变 */
+    position: relative;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    height: 88vh;
-    align-items: stretch; /* 使所有项目的高度一致 */
+    height: 90vh;
+}
 
+.scene4-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: radial-gradient(circle at center, #000000, #4e0000, #800000, #a0522d, #c19a6b);
+    z-index: 0;
 }
 
 .scene4card {
-    padding: 15px;
-    margin: 10px 10px 20px;
+    padding: 20px;
+    margin: 10px;
     width: calc(90% / 3 - 20px); /* 三个横排 */
     border: 3px solid #806b2a; /* 暗金色边框 */
     color: #ffffff; /* 暗棕色文本 */
@@ -322,7 +359,7 @@ display: flex;         /* 启用Flexbox布局 */
         width: 90%; /* 在小屏幕上占满更多空间 */
     }
     .scene4 {
-        min-height: 300vh; /* 或者设置一个足够大的固定高度 */
+        min-height: 250vh; /* 或者设置一个足够大的固定高度 */
         padding: 0px 0px 60px 0px;
     }
 }
@@ -332,12 +369,12 @@ display: flex;         /* 启用Flexbox布局 */
         width: 30%; /* 在小屏幕上占满更多空间 */
     }
     .scene4 {
-        min-height: 300vh; /* 屏幕宽度在800px到1400px时，设置更大的高度 */
+        min-height: 250vh; /* 屏幕宽度在800px到1400px时，设置更大的高度 */
         padding: 0px 0px 60px 0px;
     }
 }
 
-/* 在 .top-navigation li 和 .top-navigation li:hover 后面添加 */
-.top-navigation li.active {
-    background: linear-gradient(to bottom right, #ff5e00, rgb(0, 0, 0));
+
+.rotatable {
+    transition: transform 0.5s ease; /* 调整时间和缓动函数以符合你的需求 */
 }
