--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,8 @@ html, body {
 /* 添加到你的CSS文件或<style>标签中 */
 #overlayGif {
     mix-blend-mode: multiply; /* 使得白色部分与背景融合 */
-     /* 调整亮度和对比度 */
-    filter: brightness(150%);
+    /* 调整色相 */
+    filter: hue-rotate(50deg); /* 可能需要调整这个值来获得理想的颜色 */
     position: fixed;  /* 固定位置，始终位于页面顶部 */
     top: 50%;         /* 从顶部开始的50%位置 */
     left: 0;          /* 从左侧开始 */
