--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,7 @@ html, body {
 
 /* 添加到你的CSS文件或<style>标签中 */
 #overlayGif {
-    mix-blend-mode: multiply; /* 使得白色部分与背景融合 */
-    filter: contrast(150%);
+    mix-blend-mode: multiply;
     position: fixed;  /* 固定位置，始终位于页面顶部 */
     top: 50%;         /* 从顶部开始的50%位置 */
     left: 0;          /* 从左侧开始 */
